[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Terrain/3 - Tropics/Background parts/_Complete_static_BG_(288 x 208).png" type="Texture" id=1]
[ext_resource path="res://assets/font/MilkyNice.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/UI/menuScript.gd" type="Script" id=3]
[ext_resource path="res://assets/Musics/music.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 176 )
scale = Vector2( 2.26923, 2.26923 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 384.0
color = Color( 0, 0.0117647, 0.00784314, 0.823529 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.0
margin_top = -142.0
margin_right = 463.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "COMANDOS BÁSICOS
- Caminhar p/ direita: Seta direita
- Caminhar p/ esquerda: Seta esquerda
- Pular: Barra de espaço

COMANDOS GIT
- Merge: Incorpora as alterações dos commits da branch informada
na branch atual.
- Checkout: Atualiza os arquivos na árvore de trabalho para
corresponder à branch selecionada.
- Reset: Redefine a branch atual para o estado inicial."

[node name="ButtonBack" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "<- voltar"
script = ExtResource( 3 )

[node name="LinkButton" type="LinkButton" parent="."]
margin_left = 26.0
margin_top = 333.0
margin_right = 375.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Veja a documentação completa do GIT aqui"
underline = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
autoplay = true

[connection signal="pressed" from="ButtonBack" to="ButtonBack" method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="LinkButton" to="ButtonBack" method="_on_LinkButton_pressed"]
