[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/font/MilkyNice.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Terrain/1 - Grassland/Background parts/_Complete_static_BG_(288 x 208).png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/menuScript.gd" type="Script" id=3]
[ext_resource path="res://assets/Musics/music.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 48.0
margin_bottom = 48.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 128 )
scale = Vector2( 2.26923, 2.26923 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -112.0
margin_right = 149.92
margin_bottom = 44.352
alignment = 1

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 293.0
margin_bottom = 42.0
focus_neighbour_left = NodePath("../ButtonQuit")
custom_colors/font_color_focus = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start"
icon_align = 1

[node name="ButtonCommands" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 293.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( -260, -149 )
custom_colors/font_color_focus = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_fonts/font = SubResource( 1 )
text = "Comandos"
icon_align = 1

[node name="ButtonAbout" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 293.0
margin_bottom = 110.0
custom_colors/font_color_focus = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sobre"
icon_align = 1

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 293.0
margin_bottom = 144.0
focus_neighbour_bottom = NodePath("../ButtonStart")
custom_colors/font_color_focus = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.815686, 0.772549, 0.0392157, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"
icon_align = 1

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -176.0
margin_right = 60.0
margin_bottom = -140.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "GITBOX"
uppercase = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCommands" to="." method="_on_ButtonCommands_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
